# pychecksumcache

./: .gitignore  LICENSE  Makefile  README.md  checksum_cache.json  pyproject.toml
.github/actions/test/: action.yml
.github/workflows/: release.yml  test.yml  update-deps.yml
pychecksumcache/: __init__.py  pychecksumcache.py
scripts/: version.sh
tests/: test_pychecksumcache.py  test_pychecksumcache_aggregate.py
